Fixes to modularity. Running and testing now (#576)
* wip: Fix module running:
  * downgraded logback version : https://jira.qos.ch/browse/LOGBACK-1491
  * add required github.api and com.fasterxml.databind(required github.api)
  * cherrypick module-info.java from old PR for java 11
  * fix mainClassName (mainModule makes automatically)

* wip: Fix test running: add implicit exports module for jupiter module (gradle try run tests in module path, if without it)
Some refactoring for module-info.java

* wip: ignore module-info.java for checkstyle

* Update module-info.java with commonmark